Update Step 034 (three more tertiary colors - chartreuse green, azure, and rose) 022 styles.css

--- a/001 (New) Responsive Web Design/003 Learn CSS Colors by Building a Set of Colored Markers/Step 034 (three more tertiary colors - chartreuse green, azure, and rose) 022 styles.css
+++ b/001 (New) Responsive Web Design/003 Learn CSS Colors by Building a Set of Colored Markers/Step 034 (three more tertiary colors - chartreuse green, azure, and rose) 022 styles.css
@@ -1,11 +1,20 @@
 .one {
+  /*
+  chartreuse green (green + yellow)
+  */
   background-color: rgb(127, 255, 0);
 }
 
 .two {
+  /*
+  azure (blue + cyan)
+  */
   background-color: rgb(0, 127, 255);
 }
 
 .three {
+  /*
+  rose (red + magenta)
+  */
   background-color: rgb(255, 0, 127);
 }
